@@ -17,6 +17,7 @@ Changes:
 - Add ability to edit sync property on ZFS dataset and volume.
 - Add ability to import encrypted disks.
 - Add ability to import software raid disks. (except vinum)
+- Add ability to import single disks. (detect ZFS/UFS/NTFS only)
 - Add ZFS sparse volume support.
 - Wait response of LAN interface if static with gateway.
 - Run umount before iSCSI initiator shutdown.
